# Rasteriser

./: CMakeLists.txt  README.md  build.sh
src/: CMakeLists.txt  bmp.cpp  bmp.h  concurrency.h  draw.h  framebuffer.h  io.cpp  io.h  lighting.cpp  lighting.h  main.cpp  matrix.cpp  matrix.h  model.cpp  model.h  phong.cpp  phong.h  scene.cpp  scene.h  texture.h  tuple.h  window.cpp  window.h
